pkg/lang/syntax/testdata/ub/validate/invalid/factory/resource-trigger.ub
factory: {
  resources: {
    hello: std.fs-file {
      @trigger: 'always'
    }
  }
}
